--- a/LoginSample/DataAccess/DataAccess.csproj
+++ b/LoginSample/DataAccess/DataAccess.csproj
@@ -16,6 +16,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.8" />
   </ItemGroup>
 
   <ItemGroup>
