--- a/LoginSampleFrontEnd/loginSampleApp/package.json
+++ b/LoginSampleFrontEnd/loginSampleApp/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@auth0/angular-jwt": "^5.1.2",
+    "bootstrap": "^5.3.0",
     "ngx-cookie-service": "^16.0.0",
     "redux": "^4.2.1",
     "rxjs": "~7.8.0",
